--- a/djangoapp/templates/discounts.html
+++ b/djangoapp/templates/discounts.html
@@ -1,4 +1,11 @@
 <table>
+    <form action="/search/" method="post">
+        <label for="search">Enter Title: </label>
+        <input id="search" type="text" name="discounts" value="{{ current_search }}">
+        <input type="submit" value="OK">
+    </form>
+
+
     <tr>
         <th>ID</th>
         <th>Title</th>
