discounts with search bar

--- a/djangoapp/templates/discounts.html
+++ b/djangoapp/templates/discounts.html
@@ -1,9 +1,10 @@
 <table>
-    <form action="/search/" method="post">
-        <label for="search">Enter Title: </label>
-        <input id="search" type="text" name="discounts" value="{{ current_search }}">
-        <input type="submit" value="OK">
+    <form action="search" method="post">
+        {% csrf_token %}
+        {{form.as_p}}   
+        <input type="submit" value="Submit">
     </form>
+    <form action="" method="get"><input type="submit" value="Show ALL"></form>
 
 
     <tr>
