--- a/djangoapp/templates/login.html
+++ b/djangoapp/templates/login.html
@@ -1,7 +1,11 @@
 <table>
-    {% csrf_token %}
     <form method="post">
+        {% csrf_token %}
         {{form.as_p}}   
         <input type="submit" value="Submit">
     </form>
+
+
+    <p>{{message}}</p>
+        
 </table>
