login and register added

--- a/djangoapp/templates/discounts.html
+++ b/djangoapp/templates/discounts.html
@@ -6,7 +6,9 @@
     </form>
 
 
-    <form method="get"><input type="submit" value="Show ALL"></form>
+    <form method="get">
+        <input type="submit" value="Show ALL">
+    </form>
 
 
     <tr>
