--- a/djangoapp/templates/base.html
+++ b/djangoapp/templates/base.html
@@ -2,8 +2,18 @@
 <html>
 <body>
 
-<h1>Hello World!</h1>
-<p>Welcome to my Django project!</p>
+<h1>Homepage</h1>
+
+<a href="/register">Register</a> 
+<p></p>
+<a href="/login">Login</a>
+<p></p>
+<a href="/api">/api</a>
+<p></p>
+<a href="/discounts">/discounts</a>
+<p></p>
+
+
 
 </body>
 </html>
