--- a/djangoapp/templates/register.html
+++ b/djangoapp/templates/register.html
@@ -1,10 +1,11 @@
 <html>
-    <h1>Login</h1>
+    <h1>Register</h1>
+
 
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}   
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
     </form>
 
 
