--- a/djangoapp/templates/base.html
+++ b/djangoapp/templates/base.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+  <title>{% block title %}Homepage{% endblock %}</title>
+  {% load bootstrap5 %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
+</head>
+<body style="margin:4; padding:4">
+    
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">      
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/discounts">Discounts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/api">Api</a></li>
+            </ul>
+            
+            <ul class="nav navbar-nav navbar-right">      
+                <li class="nav-item"><a class="nav-link" href="/login">
+                    <span class="glyphicon glyphicon-user"></span>Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="/register">
+                    <span class="glyphicon glyphicon-user"></span>Register</a></li>
+            </ul>        
+        </div>
+    </nav>
+    <p>-</p>
+    <p>-</p>
 
-<h1>Homepage</h1>
 
-<a href="/register">Register</a> 
-<p></p>
-<a href="/login">Login</a>
-<p></p>
-<a href="/api">/api</a>
-<p></p>
-<a href="/discounts">/discounts</a>
-<p></p>
-
+    {% block content %}
+    {% endblock %}
 
 
 </body>
