--- a/djangoapp/static/main.css
+++ b/djangoapp/static/main.css
@@ -2,3 +2,12 @@
     margin: 64px 20px;
 
 }
+
+table, th ,td {
+    border: 1px solid rgb(0, 0, 0);
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
