--- a/djangoapp/templates/discounts.html
+++ b/djangoapp/templates/discounts.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %}Discounts{% endblock %}
+
 
 {% block content %}
-<table>
+<table class="center">
     <form action="discounts" method="post">
         {% csrf_token %}
         {{form.as_p}}   
