--- a/djangoapp/templates/login.html
+++ b/djangoapp/templates/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
 <h1>Login</h1>
 
@@ -12,10 +14,4 @@
 </form>
 
 
-<<<<<<< HEAD
 {%endblock%}
-=======
-<p>{{message}}</p>
-{%endblock%}
-    
->>>>>>> 76e4d84b35ace38b30aaa0263f4b3371b9ed617c
