--- a/djangoapp/templates/register.html
+++ b/djangoapp/templates/register.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block title %}Register{% endblock %}
+
 {% block content %}
 <h1>Register</h1>
 
@@ -12,8 +14,4 @@
 </form>
 
 
-<<<<<<< HEAD
-=======
-<p>{{message}}</p>
->>>>>>> 76e4d84b35ace38b30aaa0263f4b3371b9ed617c
 {%endblock%}
