--- a/djangoapp/templates/todo.html
+++ b/djangoapp/templates/todo.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+
+{% block title %}ToDo{% endblock %}
+
+
+
 {% block content %}
 <h1>ToDo List</h1>
 
@@ -10,7 +15,13 @@
     <input type="submit" value="Submit">
 </form>
 
-<table>
+<table style="table">
+    <tr>
+        <th>Text</th>
+        <th>Creation Date</th>
+    </tr>
+
+
     {% for record in data %}
     <tr>
         <td>{{record.text}}</td>
