--- a/djangoapp/templates/login.html
+++ b/djangoapp/templates/login.html
@@ -4,14 +4,14 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>Login</h1>
-
-
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}   
-    <input type="submit" value="Login">
-</form>
-
+<div style="margin-left: 50px;">
+        
+    <h1>Login</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}   
+        <input type="submit" value="Login">
+    </form>
+</div>
 
 {%endblock%}
