--- a/djangoapp/static/main.css
+++ b/djangoapp/static/main.css
@@ -5,9 +5,22 @@
 
 table, th ,td {
     border: 1px solid rgb(0, 0, 0);
+    width: 450px;
 }
 
-.center {
-    margin-left: auto;
-    margin-right: auto;
+table.width {
+    width: 450px;
+}
+
+div.lol {
+    width: 450px; 
+    margin-left: 35%;
   }
+
+.container {
+background-color: #160a0a;
+padding: 1300px;
+max-width: 4000px;
+margin-left: auto;
+margin-right: auto;
+}
