--- a/djangoapp/templates/base.html
+++ b/djangoapp/templates/base.html
@@ -6,61 +6,59 @@
   {% load static %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
-  <link rel="stylesheet" href={%static "main.css"%}>
+  <link rel="stylesheet" href={%static "main.css"%} type="text/css">
 </head>
 
 <body>
-    <div class="margin">
+
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">      
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/discounts">Discounts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/todo">ToDoList</a></li>
+                <li class="nav-item"><a class="nav-link" href="/api">Api</a></li>
+            </ul>
 
 
-        <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-            <div class="container-fluid">
-                <ul class="nav navbar-nav">      
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/discounts">Discounts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/todo">ToDoList</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/api">Api</a></li>
-                </ul>
-
-
-                <ul class="nav navbar-nav navbar-right">      
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <span class="navbar-text glyphicon glyphicon-user"><a class="nav-link"> Welcome, {{user}} </a></span>
-                    <li class="nav-item"><a class="nav-link" href="/logout">
-                        <span class="glyphicon glyphicon-user"></span>Logout</a></li>
-                
-                        
-                    {% else %}
-                    <li class="nav-item"><a class="nav-link" href="/login">
-                        <span class="glyphicon glyphicon-user"></span>Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/register">
-                        <span class="glyphicon glyphicon-user"></span>Register</a></li>   
+            <ul class="nav navbar-nav navbar-right">      
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="navbar-text glyphicon glyphicon-user"><a class="nav-link"> Welcome, {{user}} </a></span>
+                <li class="nav-item"><a class="nav-link" href="/logout">
+                    <span class="glyphicon glyphicon-user"></span>Logout</a></li>
+            
                     
-                    {% endif %}
-                    </li>
-                </ul>        
-            </div>
-        </nav>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="/login">
+                    <span class="glyphicon glyphicon-user"></span>Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="/register">
+                    <span class="glyphicon glyphicon-user"></span>Register</a></li>   
+                
+                {% endif %}
+                </li>
+            </ul>        
+        </div>
+    </nav>
+    <p>&nbsp</p>
+    <p>&nbsp</p>
+    
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 
-        
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-            </li>
-            {% endfor %}
-        </ul>
-        {% endif %}
+    
+    {% block content %}
+    {% endblock %}
 
-        
-        {% block content %}
-        {% endblock %}
-
-    </div>
 </body>
 </html>
